[package]
name = "embedded-list"
version = "0.2.0"
edition = "2021"
description = "A list component for embedded-graphics"
license-file = "LICENSE"
repository = "https://github.com/nakajima/embedded-list"

[dependencies]
embedded-graphics = "0.8.1"

[dev-dependencies]
embedded-graphics-simulator = { version = "0.7.0" }

[[examples]]
basic = true
